WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107203
Fix crash accessing RenderView's layer's backing when not composited
https://bugs.webkit.org/show_bug.cgi?id=107203
Summary
Fix crash accessing RenderView's layer's backing when not composited
Simon Fraser (smfr)
Reported
2013-01-17 17:00:45 PST
Fix crash accessing RenderView's layer's backing when not composited
Attachments
Patch
(1.58 KB, patch)
2013-01-17 17:01 PST
,
Simon Fraser (smfr)
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-01-17 17:01:54 PST
Created
attachment 183320
[details]
Patch
Simon Fraser (smfr)
Comment 2
2013-01-17 17:08:49 PST
http://trac.webkit.org/changeset/140073
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug