Fix crash accessing RenderView's layer's backing when not composited https://bugs.webkit.org/show_bug.cgi?id=107203

Reviewed by Benjamin Poulain.

The RenderView isn't always layer-backed in WebKit1, so null-check the backing.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::rootFixedBackgroundsChanged):

git-svn-id: svn://svn.chromium.org/blink/trunk@140073 bbb929c8-8fbe-4397-9dbb-9b2b20218538