third_party/WebKit/Source/WebCore/rendering/RenderLayerCompositor.cpp
@@ -1207,7 +1207,7 @@ void RenderLayerCompositor::frameViewDidLayout()
 void RenderLayerCompositor::rootFixedBackgroundsChanged()
 {
     RenderLayerBacking* renderViewBacking = m_renderView->layer()->backing();
-    if (renderViewBacking->usingTileCache())
+    if (renderViewBacking && renderViewBacking->usingTileCache())
         setCompositingLayersNeedRebuild();
 }
 
